# signals-breakout-programs

./: .gitignore  Anchor.toml  Cargo.toml  README.md  build-wasm.sh  package.json
.cursor/rules/: signals-breakout-contract-cursor-rule.mdc
docs/: api-reference.md  architecture.md  collateral-token-faucet.md  math.md  usage.md
programs/collateral_token_faucet/: Cargo.toml  README.md
programs/collateral_token_faucet/src/: lib.rs
programs/range-bet-program/: Cargo.toml
programs/range-bet-program/math-core/: Cargo.toml  GUIDE.md  README.md
programs/range-bet-program/math-core/src/: lib.rs  wasm.rs
programs/range-bet-program/math-core/src/tests/: bin_buy_cost_tests.rs  bin_sell_cost_tests.rs  budget_validation_test.rs  edge_cases_tests.rs  mod.rs  multi_bins_buy_cost_tests.rs  property_tests.rs  x_for_multi_bins_tests.rs
programs/range-bet-program/pkg-wasm/: README.md  package.json  range_bet_math_core.d.ts  range_bet_math_core_bg.js  range_bet_math_core_bg.wasm  range_bet_math_core_bg.wasm.d.ts
programs/range-bet-program/src/: errors.rs
programs/range-bet-program/src/instructions/: buy_tokens.rs  claim_reward.rs  transfer_position.rs
programs/signals_breakout_contracts/: Cargo.toml
programs/signals_breakout_contracts/math-core/: Cargo.toml  README.md
programs/signals_breakout_contracts/math-core/proptest-regressions/tests/: property_tests.txt
programs/signals_breakout_contracts/math-core/src/: lib.rs
programs/signals_breakout_contracts/math-core/src/tests/: bench.rs  bin_buy_cost_tests.rs  bin_sell_cost_tests.rs  mod.rs  multi_bins_buy_cost_tests.rs  multi_bins_sell_cost_tests.rs  x_for_multi_bins_tests.rs
programs/signals_breakout_contracts/pkg-wasm/: README.md  range_bet_math_core.d.ts  range_bet_math_core.js  range_bet_math_core_bg.wasm  range_bet_math_core_bg.wasm.d.ts
programs/signals_breakout_contracts/src/: errors.rs  lib.rs  math.rs  state.rs
programs/signals_breakout_contracts/src/instructions/: buy_tokens.rs  claim_reward.rs  close_market.rs  create_market.rs  initialize_program.rs  mod.rs  toggle_market_status.rs  transfer_position.rs  view_functions.rs  withdraw_collateral.rs
src/: lib.rs
tests/: bin-range-query.ts  collateral-token-faucet.ts  collateral-withdrawal.ts  market-close.ts  market-creation.ts  market-management.ts  setup.ts  signals_breakout_contracts.ts  token-operations.ts  utility-functions.ts
