[package]
name = "signals_workspace_meta"
version = "0.1.0"
edition = "2021"
publish = false   # 실수로 크레이트 업로드 방지

[workspace]
name = "signals-breakout-programs"
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
